// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom replaceTags 1`] = `
{
  "output": [
    {
      "fileName": "abc.html",
      "name": "abc.html",
      "needsCodeReference": false,
      "source": "<div></div>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><div></div></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then doesn't mess with tags it shouldn't mess with 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body { background-color: red; }</style><img src=\\"lalala.png\\"/></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then inlines css and preserves style tags 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body { background-color: red; }</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then inlines svg 1`] = `
{
  "output": [
    {
      "fileName": "i-am-an-svg.svg",
      "name": "i-am-an-svg.svg",
      "needsCodeReference": false,
      "source": "<svg viewBox=\\"0 0 100 100\\"><rect width=\\"100\\" height=\\"100\\"/></svg>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><svg  i-should-be-preserved   viewBox=\\"0 0 100 100\\"><rect width=\\"100\\" height=\\"100\\"/></svg></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then optimizes svg with custom options 1`] = `
{
  "output": [
    {
      "fileName": "i-am-an-svg.svg",
      "name": "i-am-an-svg.svg",
      "needsCodeReference": false,
      "source": "<!DOCTYPE svg PUBLIC \\"-//W3C//DTD SVG 1.1//EN\\" \\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\"><svg viewBox=\\"0 0 100 100\\"><title>hello</title><rect width=\\"100\\" height=\\"100\\"/></svg>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><svg  i-should-be-preserved   viewBox=\\"0 0 100 100\\"><path d=\\"M0 0h100v100H0z\\"/></svg></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then optimizes svg with default options 1`] = `
{
  "output": [
    {
      "fileName": "i-am-an-svg.svg",
      "name": "i-am-an-svg.svg",
      "needsCodeReference": false,
      "source": "<svg viewBox=\\"0 0 100 100\\"><rect width=\\"100\\" height=\\"100\\"/></svg>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><svg  i-should-be-preserved   viewBox=\\"0 0 100 100\\"><path d=\\"M0 0h100v100H0z\\"/></svg></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it works without any options 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body { background-color: red; }</style></html>",
      "type": "asset",
    },
  ],
}
`;
